--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@ html, body {
 body {
     background-color: #1f2937;    
     padding: 0px 128px;
+    color: white;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 100px;
 
 }
 
@@ -38,8 +40,40 @@ li {
 .main-container {
     display: flex;
     flex-direction: column;
+
 }
 
 .subsec1 {
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex: 1;
+}
+
+.subsec2 {
+    width: ;
+}
+
+.section-1 {
+    display: flex;
+    height: 50%;
+    width: 50%;
+    flex: 1 1 0;
+    
+}
+
+.main-text {
+    font-size: 50px;
+    font-weight: 900;
+}
+
+button {
+    padding: 4px 16px;
+    background-color: #3882f6;
+    color: white;
+    border-radius: 4px;
+    border: none;
+    margin-top: 5px;
 }
