--- a/style.css
+++ b/style.css
@@ -4,16 +4,18 @@ html, body {
 }
 
 body {
-    background-color: #1f2937;    
-    padding: 0px 128px;
+    background-color: #1f2937;     
     color: white;
+    margin: 0;
+    padding: 0;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
+    padding: 8px 128px;
 
 }
 
@@ -40,7 +42,7 @@ li {
 .main-container {
     display: flex;
     flex-direction: column;
-
+    
 }
 
 .subsec1 {
@@ -49,18 +51,29 @@ li {
     align-items: flex-start;
     justify-content: center;
     flex-wrap: wrap;
-    flex: 1;
+    height: 25%;
+    width: 50%;
+    padding: 50px 0px;
+
 }
 
 .subsec2 {
-    width: ;
+    height: 25%;
+    width: 50%;
+    flex-wrap: wrap;
+    padding: 50px 0px;
+}
+
+div > img {
+    max-width: 100%;
+    width: 100%;
+    height: 300px;
 }
 
 .section-1 {
     display: flex;
-    height: 50%;
-    width: 50%;
-    flex: 1 1 0;
+    flex: auto; 
+    padding: 0px 128px;
     
 }
 
@@ -76,4 +89,54 @@ button {
     border-radius: 4px;
     border: none;
     margin-top: 5px;
+}
+
+.section-2 {
+    background-color: white;
+    display: flex;
+    flex: auto; 
+    padding: 0px 128px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-2-title {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+    padding: 64px;
+}
+
+.box-container {
+    display: flex;
+    flex-direction: row;
+    row-gap: 16px;
+    column-gap: 42px;
+    flex-wrap: ;
+}
+
+.media-box {
+    border: 4px solid #3882f6;
+    width: 150px;
+    height: 150px;
+    border-radius: 8px;
+    flex: auto;
+}
+
+.media-text {
+    color: #1f2937;
+    width: 150px;
+    flex: auto;
+    line-height: 1.6;
+}
+
+.media {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    font-size: 14px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 64px;
+    gap: 16px;
 }
