--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ button {
     flex-direction: row;
     row-gap: 16px;
     column-gap: 42px;
-    flex-wrap: ;
+    flex-wrap: wrap;
 }
 
 .media-box {
@@ -139,4 +139,10 @@ button {
     align-items: center;
     margin-bottom: 64px;
     gap: 16px;
+}
+
+.bird-image {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 4px;
 }
