--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ li {
 .main-container {
     display: flex;
     flex-direction: column;
+    flex: auto;
     
 }
 
@@ -72,8 +73,9 @@ div > img {
 
 .section-1 {
     display: flex;
-    flex: auto; 
+    flex: 1; 
     padding: 0px 128px;
+
     
 }
 
@@ -94,10 +96,11 @@ button {
 .section-2 {
     background-color: white;
     display: flex;
-    flex: auto; 
+    flex: 1; 
     padding: 0px 128px;
     flex-direction: column;
     align-items: center;
+
 }
 
 .section-2-title {
@@ -145,4 +148,28 @@ button {
     max-width: 100%;
     max-height: 100%;
     border-radius: 4px;
+}
+
+.section-3 {
+    background-color: #e5e7eb;
+    display: flex;
+    flex: 1; 
+    padding: 150px 128px;
+    flex-direction: column;
+    align-items: center;
+
+    justify-content: center;
+
+}
+
+.quote {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 10;
+}
+
+.quote-end {
+    font-size: 30px;
+    color: #1f2937;
+    font-weight: 900;
 }
