Complete project and add final notes

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 html, body {
     font-family: roboto, sans-serif;
+    margin: 0;
+    padding: 0;
 
 }
 
@@ -222,4 +224,15 @@ button {
 
 button {
     border: white solid 1px;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+    padding-left:128px;
+    padding-right: 128px;
+    padding-top: 8px;
+
 }
